made responsive, fixed bug, spacing

--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -1,5 +1,4 @@
 .about-section {
-  width: 50%;
   margin: auto;
-  padding: 5% 0;
+  padding: 5%;
 }
