--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+h2 {
+  font-size: calc(1em + 1vw);
+  text-align: center;
+  padding: 5%;
+  line-height: 2;
+}
+
+h5 {
+  font-size: calc(1em + 1vw);
+}
+
 .App {
   text-align: center;
   line-height: 2;
@@ -6,12 +17,6 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -25,9 +30,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -39,6 +41,6 @@
 }
 
 h2{
-  letter-spacing: 50px;
+  letter-spacing: 6vw;
   width: auto;
 }
