--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -5,13 +5,18 @@ h1{
     width: 100%;
  }
 
+h3 {
+    font-weight: 400;
+}
 p {
-    font-size: large;
+    /* font-size: large; */
+    font-size: calc(0.75em + 1vw);
     padding-top: 1rem;
 }
 
 h3 {
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
+    font-size: calc(0.5em + 1vw);
 }
 
 
@@ -42,26 +47,24 @@ h3 {
      width: 100%;
  }
 
+.header {
+    text-align: center;
+}
+
 .studio-section{
-    padding: 5rem 15%;
+    padding-bottom: 5%;
  }
 
- .studio-description {
-    padding: 1rem 5rem;
+.studio-description {
+    padding: 5%;
 
- }
-
-
+}
 
 @media (max-width: 900px) {
     .carousel {
       width:auto;
       height:auto;
     }
-}
-
-.services-section {
-    padding: 0 15%;
 }
 
 .card {
@@ -75,7 +78,7 @@ h3 {
 /* ****About Section**** */
 
 .about-mia {
-    padding: 5% 15%;
+    padding-bottom: 10%;
 }
 
 #testimonials {
